# rhymer

./: CMakeLists.txt  LICENSE  README.md
examples/: CMakeLists.txt  example.cpp
include/: CMakeLists.txt  rhymer.h
